--- a/package.json
+++ b/package.json
@@ -1,28 +1,21 @@
 {
   "name": "alemon-icqq",
-  "version": "1.1.0-rc.0",
+  "version": "1.0.0-rc.0",
   "description": "DOCS https://alemonjs.com/",
   "scripts": {
     "dev": "ts-node alemon.config.ts",
     "tsc": "tsc",
-    "format": "prettier --write .",
-    "lint": "eslint . --ext .js,.ts --fix --ignore-path .gitignore"
+    "format": "prettier --write ."
   },
   "dependencies": {
-    "icqq": "^0.6.8",
-    "ws": "^8.13.0"
+    "icqq": "^0.6.8"
   },
   "devDependencies": {
     "@types/node": "^20.2.4",
     "@types/node-schedule": "^2.1.2",
     "@types/progress": "^2.0.5",
     "@types/ws": "^8.5.5",
-    "@typescript-eslint/eslint-plugin": "^5.60.0",
-    "@typescript-eslint/parser": "^5.60.0",
     "alemonjs": "^1.2.0-rc.20",
-    "eslint": "^8.43.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.8",
     "ts-node": "^10.9.1",
     "typedoc": "^0.25.4",
