--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "icqq": "^0.6.8"
+    "icqq": "^0.6.8",
+    "inquirer": "^9.2.13"
   },
   "devDependencies": {
+    "@types/inquirer": "^9.0.7",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.2.4",
+    "@types/node-fetch": "^2.6.11",
     "@types/node-schedule": "^2.1.2",
     "@types/progress": "^2.0.5",
     "@types/ws": "^8.5.5",
