--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "alemon-icqq",
-  "version": "1.0.0-rc.0",
+  "version": "1.0.0-rc.1",
   "description": "DOCS https://alemonjs.com/",
   "scripts": {
     "dev": "ts-node alemon.config.ts",
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "icqq": "^0.6.8",
-    "inquirer": "^9.2.13"
+    "prompts": "^2.4.2"
   },
   "devDependencies": {
     "@types/inquirer": "^9.0.7",
@@ -18,6 +18,7 @@
     "@types/node-fetch": "^2.6.11",
     "@types/node-schedule": "^2.1.2",
     "@types/progress": "^2.0.5",
+    "@types/prompts": "^2.4.9",
     "@types/ws": "^8.5.5",
     "alemonjs": "^1.2.0-rc.20",
     "prettier": "^2.8.8",
